[package]
name = "StabilizerIndexer"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
alloy = { version = "2.0.5", features = ["providers", "rpc-types-eth", "sol-types", "transports", "json-rpc", "pubsub"] }
anyhow = "1.0.102"
dotenv = "0.15.0"
sqlx = { version = "0.9.0", features = ["sqlite", "postgres", "runtime-tokio"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
